add: updating my blog

--- a/data/en/blogs.toml
+++ b/data/en/blogs.toml
@@ -32,6 +32,7 @@ Writing Terraform isn’t just about “making it work”—it’s about making 
 - Use secret managers (Vault, AWS Secrets Manager).
 - Reference secrets securely via variables.
 """
+link = "/my-first-blog.md"
 
 [[blogs]]
 title = "Terraform in Action: Linting, Planning, and Security"
