--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
           sudo apt-get install -y hugo
 
       - name: Build Hugo site
-        run: hugo --minify
+        run: hugo --minify --baseURL "https://malikhq.netlify.app/"
 
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
