--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
-  command = ""
+  command = "hugo --minify"
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.149.0"  # your Hugo version
-
-baseURL = "https://malikhq.netlify.app/"
 
