--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,112 +1,19 @@
-# name: Netlify Deploy
+name: 'Netlify Deploy'
 
-# on:
-#   push:
-#     branches: [main]
-
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-
-#       - name: Install Hugo
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y hugo
-
-#       - name: Build Hugo site
-#         run: hugo --minify 
-
-#       - name: Deploy to Netlify
-#         uses: netlify/actions/cli@master
-#         with:
-#           args: deploy --dir=public --prod --message "Prod deploy v${{ github.sha }}"
-#         env:
-#           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-#           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-
-# name: 'Hugo Netlify Deploy'
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       # 1. Checkout code
-#       - uses: actions/checkout@v4
-
-#       # 2. Set up Hugo
-#       - uses: peaceiris/actions-hugo@v3
-#         with:
-#           hugo-version: '0.115.1'
-#           extended: true
-
-#       # 3. Build Hugo site
-#       - run: hugo --minify
-
-#       # 4. Install Netlify CLI
-#       - name: Install Netlify CLI
-#         run: npm install -g netlify-cli
-
-#       # 5. Deploy to Netlify
-#       - uses: jsmrcaga/action-netlify-deploy@v2.0.0
-#         with:
-#           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-#           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-#           NETLIFY_DEPLOY_MESSAGE: "Deploy from main branch push ${{ github.sha }}"
-#           NETLIFY_DEPLOY_TO_PROD: true
-#           build_directory: 'public'
-#           install_command: "echo Skipping install"
-#           build_command: "echo Skipping build"
-
-
-name: "Hugo Deploy to Netlify"
-
-# Trigger workflow on push to main
 on:
   push:
     branches:
       - main
-
 jobs:
-  build-and-deploy:
-    name: "Build Hugo and Deploy"
+  deploy:
+    name: 'Deploy'
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # 2. Set up Hugo
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
-        with:
-          hugo-version: '0.149.0'  # Match the version you use on Netlify
-          extended: true
-
-      # 3. Build Hugo site
-      - name: Build Hugo
-        run: hugo --minify
-
-      # 4. Install Netlify CLI
-      - name: Install Netlify CLI
-        run: npm install -g netlify-cli
-
-      # 5. Deploy to Netlify
-      - name: Deploy to Netlify
-        uses: jsmrcaga/action-netlify-deploy@v2.0.0
+      - uses: actions/checkout@v4
+      - uses: jsmrcaga/action-netlify-deploy@master
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_DEPLOY_MESSAGE: "Deploy from main branch ${{ github.sha }}"
+          NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
           NETLIFY_DEPLOY_TO_PROD: true
-          build_directory: "public"
-          install_command: "echo Skipping install"
-          build_command: "echo Skipping build"
