--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,72 +1,47 @@
-name: Netlify Deploy
+name: CI/CD
 
 on:
-  workflow_dispatch:
-  pull_request:
   push:
     branches:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
+    name: Build static artifacts using Hugo
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v2
         with:
-          node-version: 20
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
+          submodules: true
+          fetch-depth: 50
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "0.134.3"
-          extended: true
-
-      - name: Setup Go
-        uses: actions/setup-go@v4
+          hugo-version: '0.115.1-extended'
+      - name: Build
+        run: hugo --gc --minify
+      - name: Upload public directory
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v2
         with:
-          go-version: "1.23"
+          name: public
+          path: public/
+          retention-days: 1
 
-      - name: Install Dependencies
-        run: pnpm install
-
-      - name: Project Setup and Build
-        run: |
-          pnpm project-setup
-          pnpm build
-
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v2.0
+  deploy:
+    name: Deploy to Netlify
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download public directory
+        uses: actions/download-artifact@v2
         with:
-          publish-dir: "./public"
-          production-branch: main
-          github-token: ${{ secrets.NETLIFY_GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
-          enable-pull-request-comment: false
-          enable-commit-comment: true
-          overwrites-pull-request-comment: true
+          name: public
+          path: public/
+      - name: Publish
+        uses: netlify/actions/cli@v1
+        with:
+          args: deploy --dir=public --prod
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
