--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.115.1-extended'
+          hugo-version: '0.149.0'
       - name: Build
         run: hugo --gc --minify
       - name: Upload public directory
