--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,50 +1,42 @@
-name: CI/CD
+name: Hugo build + Netlify deploy
 
 on:
   push:
+    branches:
+      - main
 
 jobs:
-  build:
-    name: Build static artifacts using Hugo
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-20.04
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
-          submodules: true  # Fetch Hugo themes
-          fetch-depth: 50
+          submodules: true       # Fetch Hugo themes
+          fetch-depth: 1         # Only fetch required history
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v5
+        uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.115.0'   # Latest stable Hugo version
-          extended: true
+          hugo-version: '0.93.2'
 
-      - name: Build
-        run: hugo --gc --minify
-
-      - name: Upload public directory
-        if: github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v4
-        with:
-          name: public
-          path: public/
-          retention-days: 1
-
-  deploy:
-    name: Deploy to Netlify
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download public directory
-        uses: actions/download-artifact@v4
-        with:
-          name: public
-          path: public/
-
-      - name: Publish
-        uses: netlify/actions/cli@v2
-        with:
-          args: deploy -p --dir=public
+      - name: Hugo build
         env:
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          HUGO_ENV: production
+        run: hugo --minify
+
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v1.2.3
+        env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        with:
+          publish-dir: './public'
+          production-branch: main
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "GitHub Actions deploying commit: ${{ github.event.head_commit.message }}"
+          enable-pull-request-comment: false
+          enable-commit-comment: false
+          overwrites-pull-request-comment: false
+          timeout-minutes: 1
