add: updating my blog

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,5 @@
 name: Netlify CI/CD
 
-# Trigger on pushes to main branch
 on:
   push:
     branches:
@@ -10,33 +9,18 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1️⃣ Checkout the repo
+      # 1️⃣ Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js (needed for Netlify plugins and build tools)
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
-      # 3️⃣ Setup Hugo Extended
+      # 2️⃣ Setup Hugo Extended
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: '0.149.0'
           extended: true
 
-      # 4️⃣ Cache npm modules to speed up builds
-      - name: Cache Node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      # 5️⃣ Cache Hugo cache & modules
+      # 3️⃣ Cache Hugo build artifacts for faster rebuilds
       - name: Cache Hugo
         uses: actions/cache@v3
         with:
@@ -45,15 +29,11 @@ jobs:
             resources/_gen
           key: hugo-${{ hashFiles('**/*.html', '**/*.md') }}
 
-      # 6️⃣ Install npm dependencies (if you have any frontend build tools)
-      - name: Install dependencies
-        run: npm ci
-
-      # 7️⃣ Build the site
+      # 4️⃣ Build Hugo site
       - name: Build Hugo site
         run: hugo --minify
 
-      # 8️⃣ Deploy to Netlify
+      # 5️⃣ Deploy to Netlify
       - name: Deploy to Netlify
         uses: jsmrcaga/action-netlify-deploy@master
         with:
